--- a/index.html
+++ b/index.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  
-    <link href='boot-dist/css/bootstrap.css' rel='stylesheet'>
-    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-            crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="project.css">
   <title>ABC Health</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link  rel="stylesheet" href="boot-dist/css/bootstrap.css">
@@ -20,27 +13,6 @@
 
 <body>
 
-<nav class="navbar navbar-inverse navbar-static-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span> 
-      </button>
-      <a class="navbar-brand" href="#">ABC Health</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="index.html">Home <i class="em em-house_with_garden"></i></a></li>
-        <li><a href= "sexualhealth.html"> Sexual <i class="em em-couplekiss"></i></a></li>
-        <li><a href="physical health.html">Physical <i class="em em-muscle"></i></a></li>
-        <li><a href="mental health.html">Mental <i class="em em-massage"></i></a></li>
-      </ul>
-    </div>
-  </div>
-</nav>	
-</nav>
     <nav class="navbar navbar-inverse navbar-static-top">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -62,35 +34,42 @@
       </div>
     </nav>	
 
-	<h1>HEALTH</h1>
+	<h1 id="index-head">ABC HEALTH</h1>
+  <h2 class="strapline">As easy as ABC to keep healthy at Uni!</h2>
 	<div class="container">
 		<div class="row">
   	 		<div class='col-sm-4'>
  	 			<div class="col1">
-    				<h2>Physical</h2>
-    				<img src="images/yellow.png" class="img-responsive">
+    			<div class="thumbnail text-center">
+          <img src="images/yellow.png" class="img-responsive">
+          <div class="caption" id="index-caption">
+        <p class="postit">Physical</p>
+        </div>
+        </div>
     			</div>
     		</div>
     		<div class='col-sm-4'>
     			<div class="col2">
-  					<h2>Mental</h2>
-  					<img src="images/green.png" class="img-responsive">
+  					 <div class="thumbnail text-center">
+          <img src="images/green.png" class="img-responsive">
+          <div class="caption" id="index-caption">
+        <p class="postit">Mental</p>
+        </div>
+        </div>
   				</div>
   			</div>
   			<div class='col-sm-4'>
   				<div class="col3">
-  					<h2>Sexual</h2>
-  					<img src="images/pink-postit.png" class="img-responsive">
+  					 <div class="thumbnail text-center">
+          <img src="images/pink-postit.png" class="img-responsive">
+          <div class="caption" id="index-caption">
+        <p class="postit">Sexual</p>
+        </div>
+        </div>
   				</div>
   			</div>
   		</div>
   	</div>
-
-<script>
-$(document).ready(function () {
-$('.navbar-toggle').dropdown();
-});
-</script>
 
     <div id='social-buttons'>
       <div class="media-buttons">
@@ -102,7 +81,7 @@ $('.navbar-toggle').dropdown();
 
   <div class="about">
     <h1>About us!</h1>
-  <div class="show-description hidden">  
+  <div class="writing">  
     <p>Who are we?</p>
     <p> We are 3 Sheffield University students who believe that health at University is important and wanted to create a website for students to use to gain advice and tips on how to stay healthy whilst at Uni!</p>
 
@@ -126,10 +105,11 @@ $('.navbar-toggle').dropdown();
 </div>
 
 <script>
-    // when the .about button is clicked, we toggle the hidden class on .show-description 
-    $('.about').on('click', function () {
-        $('.show-description').toggleClass('hidden');
+$(document).ready(function(){
+    $(".about").click(function(){
+        $(".writing").toggle(1000);
     });
+});
 </script>
 
 <script src='boot-dist/js/bootstrap.js'></script>
